[gd_scene load_steps=4 format=3 uid="uid://d1qhayqj1wyyf"]

[ext_resource type="Script" uid="uid://vg37rvxgtw46" path="res://Options/options.gd" id="1_oxfvm"]
[ext_resource type="Script" uid="uid://dtbbm1xwu0jpo" path="res://Options/code.gd" id="2_ooduq"]
[ext_resource type="Script" uid="uid://cadiwrotmf6ws" path="res://Options/keys_remap.gd" id="2_ymabl"]

[node name="Options" type="Node2D"]
script = ExtResource("1_oxfvm")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -6.0
offset_right = 1161.0
offset_bottom = 654.0
color = Color(0.0502962, 0.195217, 0.248097, 1)
metadata/_edit_lock_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -43.0
offset_top = 623.0
offset_right = 1297.0
offset_bottom = 685.0
rotation = -0.546288
color = Color(1, 1, 1, 0.462745)
metadata/_edit_lock_ = true

[node name="ColorRect3" type="ColorRect" parent="."]
offset_left = 56.0
offset_top = 715.0
offset_right = 1396.0
offset_bottom = 777.0
rotation = -0.546288
color = Color(1, 1, 1, 0.462745)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 133.0
offset_top = 115.0
offset_right = 289.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="Label2" type="Label" parent="."]
offset_left = 214.0
offset_top = 272.0
offset_right = 320.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 25
text = "ARROWS"

[node name="Label3" type="Label" parent="."]
offset_left = 499.0
offset_top = 273.0
offset_right = 569.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 25
text = "BUTTON"

[node name="UP" type="Button" parent="."]
offset_left = 136.0
offset_top = 332.0
offset_right = 216.0
offset_bottom = 374.0
text = "UP"

[node name="DOWN" type="Button" parent="."]
offset_left = 133.0
offset_top = 380.0
offset_right = 217.0
offset_bottom = 422.0
text = "DOWN"

[node name="RIGHT" type="Button" parent="."]
offset_left = 135.0
offset_top = 472.0
offset_right = 219.0
offset_bottom = 514.0
text = "RIGHT"

[node name="LEFT" type="Button" parent="."]
offset_left = 134.0
offset_top = 428.0
offset_right = 218.0
offset_bottom = 470.0
text = "LEFT"

[node name="A" type="Button" parent="."]
offset_left = 433.0
offset_top = 330.0
offset_right = 467.0
offset_bottom = 371.0
text = "A"

[node name="B" type="Button" parent="."]
offset_left = 433.0
offset_top = 375.0
offset_right = 467.0
offset_bottom = 416.0
text = "B"

[node name="C" type="Button" parent="."]
offset_left = 433.0
offset_top = 421.0
offset_right = 467.0
offset_bottom = 462.0
text = "C"

[node name="D" type="Button" parent="."]
offset_left = 433.0
offset_top = 466.0
offset_right = 467.0
offset_bottom = 507.0
text = "D"

[node name="FullScreen" type="CheckBox" parent="."]
unique_name_in_owner = true
offset_left = 787.0
offset_top = 90.0
offset_right = 921.0
offset_bottom = 121.0
scale = Vector2(1.5, 1.5)
text = " FULL SCREEN"

[node name="Music" type="HScrollBar" parent="."]
unique_name_in_owner = true
offset_left = 785.0
offset_top = 236.0
offset_right = 974.0
offset_bottom = 271.0
value = 100.0
rounded = true

[node name="SFX" type="HScrollBar" parent="."]
unique_name_in_owner = true
offset_left = 786.0
offset_top = 337.0
offset_right = 975.0
offset_bottom = 372.0
value = 100.0
rounded = true

[node name="MusicLog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1001.0
offset_top = 232.0
offset_right = 1110.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 30
text = "0"

[node name="SFXLog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1001.0
offset_top = 333.0
offset_right = 1110.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 30
text = "0"

[node name="SFXLabel" type="Label" parent="."]
offset_left = 810.0
offset_top = 282.0
offset_right = 919.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 30
text = "SFX"

[node name="musiclabel" type="Label" parent="."]
offset_left = 803.0
offset_top = 184.0
offset_right = 912.0
offset_bottom = 232.0
theme_override_font_sizes/font_size = 30
text = "MUSIC"

[node name="Reset" type="Button" parent="."]
offset_left = 988.0
offset_top = 567.0
offset_right = 1108.0
offset_bottom = 617.0
text = "RESET"

[node name="Save" type="Button" parent="."]
offset_left = 987.0
offset_top = 465.0
offset_right = 1107.0
offset_bottom = 515.0
text = "SAVE"

[node name="Return" type="Button" parent="."]
offset_left = 857.0
offset_top = 567.0
offset_right = 977.0
offset_bottom = 617.0
text = "RETURN"

[node name="Uplog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 339.0
offset_right = 286.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Downlog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 391.0
offset_right = 297.0
offset_bottom = 419.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Leftlog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 435.0
offset_right = 297.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Rightlog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 476.0
offset_right = 297.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Alog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 485.0
offset_top = 335.0
offset_right = 538.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Blog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 486.0
offset_top = 379.0
offset_right = 539.0
offset_bottom = 407.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Clog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 490.0
offset_top = 426.0
offset_right = 543.0
offset_bottom = 454.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Dlog" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 491.0
offset_top = 474.0
offset_right = 544.0
offset_bottom = 502.0
theme_override_font_sizes/font_size = 20
text = "NULL"

[node name="Rebind" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="KeysRemap" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_ymabl")

[node name="Code" type="Node" parent="."]
script = ExtResource("2_ooduq")

[node name="LOG" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 39.0
offset_top = 594.0
offset_right = 223.0
offset_bottom = 617.0
text = "This is the option panel."

[connection signal="pressed" from="UP" to="KeysRemap" method="_on_up_pressed"]
[connection signal="pressed" from="DOWN" to="KeysRemap" method="_on_down_pressed"]
[connection signal="pressed" from="RIGHT" to="KeysRemap" method="_on_right_pressed"]
[connection signal="pressed" from="LEFT" to="KeysRemap" method="_on_left_pressed"]
[connection signal="pressed" from="A" to="KeysRemap" method="_on_a_pressed"]
[connection signal="pressed" from="B" to="KeysRemap" method="_on_b_pressed"]
[connection signal="pressed" from="C" to="KeysRemap" method="_on_c_pressed"]
[connection signal="pressed" from="D" to="KeysRemap" method="_on_d_pressed"]
[connection signal="pressed" from="FullScreen" to="Code" method="_on_full_screen_pressed"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Reset" to="Code" method="_on_reset_pressed"]
[connection signal="pressed" from="Save" to="Code" method="_on_save_pressed"]
[connection signal="timeout" from="Rebind" to="KeysRemap" method="_on_rebind_timeout"]
